organizing things a bit

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 #pickles folder
-/pickles
+slackcleaner/pickles
 
 # config.ini has a github PAT
 config.ini
 
 .vscode/
+repodelete/.vscode/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
